--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ body {
 
 .container-wrapper {
 	width: 1260px;
-	margin: 0px auto 30px;
+	margin: 20px auto 30px;
 	-webkit-box-shadow:0px 0px 15px 0px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow:0px 0px 15px 0px rgba(0, 0, 0, 0.2);
 	box-shadow:0px 0px 15px 0px rgba(0, 0, 0, 0.2);
@@ -325,7 +325,10 @@ body {
 	max-height: 500px;
 	width: 100%;
 }
-
+#welcome-gif {
+	background-color: #fff;
+	overflow: hidden;
+}
 .pego-columns6 {
 	width: 630px;
 }
@@ -652,7 +655,7 @@ span.sf-sub-indicator {
 	background: #fff;
 }
 .menu-wrapper ul.sf-menu > li > a:hover, .menu-wrapper ul.sf-menu > li.sfHover > a, .menu-wrapper ul.sf-menu > li.current-menu-item > a, .menu-wrapper ul.sf-menu > li.current-menu-parent > a, .menu-wrapper ul.sf-menu > li.current-menu-ancestor > a  {
-	background: #0b559e;
+	background: #01dbb9;
 	color: #fff;
 	-webkit-font-smoothing: antialiased; 
 }
@@ -976,7 +979,7 @@ img.testimonial-image {
 div.testimonial-content {
 	text-align: center;
 	color: #fff;
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 1.6;
 	margin-bottom: 20px;
 }
@@ -1005,7 +1008,7 @@ div.contact-info2 {
 	color: #000;
 }
 div.contact-info3 {
-	font-size: 90px;
+	font-size: 60px;
 	font-weight: 700;
 	letter-spacing: -4px;
 	color: #000;
@@ -3000,4 +3003,112 @@ ul#filters {
 .work-text {
 	text-align: center;
 	padding: 20px 10px;
+}
+
+.popup  {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.4);
+	top: 0;
+    left: 0;
+    z-index: 100;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.5s ease 0s;
+}
+
+.popup.open {
+	opacity: 1;
+	visibility: visible;
+}
+
+.popup__body  {
+	min-height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 30px 10px;
+}
+
+.popup__content  {
+	background-color: #fff;
+	color: #000;
+	max-width: 800px;
+	padding: 30px;
+	border-radius: 5px;
+	position: relative;
+}
+
+.popup__title {
+	margin-bottom: 10px;
+	font-weight: bold;
+	font-size: 24px;
+	color: #000;
+}
+
+.popup__close {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+}
+
+.popup__content form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.popup__content form input {
+	margin-bottom: 10px;
+	padding: 10px;
+	border-radius: 5px;
+	border: 1px #32506d solid;
+	width: 100%;
+	text-align: center;
+	font-size: 18px;
+}
+
+.popup__content form button {
+	padding: 15px 30px;
+	font-size: 16px;
+	color: #000;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: all 150ms ease;
+	background-color: #3e82b9;
+	color: #fff;
+	border: none;
+}
+
+.popup__content form button:active {
+	transform: scale(0.95);
+	background-color: #3c79aa;
+}
+ 
+.popup__icon {
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	animation: 1.5s ease-in-out 2s normal none infinite running trambling-animation;
+}
+
+.popup__icon img:hover {
+	transition: all 150ms ease;
+	cursor: pointer;
+	filter: contrast(1.2);
+}
+
+@keyframes trambling-animation {
+    0%, 50%, 100% {
+        transform: rotate(0deg);
+    }
+    10%, 30% {
+        transform: rotate(-12deg);
+    }
+    20%, 40% {
+        transform: rotate(12deg);
+    }
 }
